--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -56,7 +56,7 @@
         <div class="text-center ng-hide" ng-show="ur == 'TEACHER'">
             Для заполнения ведомостей текущей аттестации,<br>
             необходимо перейти в раздел
-            <a class="bold text-info" ui-sref="fill">
+            <a class="bold text-info" ui-sref="attestation">
                 <b>"Заполнение ведомостей"</b>.
             </a>
             <br>
