--- a/src/main/resources/static/Templates/subject.html
+++ b/src/main/resources/static/Templates/subject.html
@@ -7,6 +7,10 @@
 
     <div class="my-3 col-md-10 card bg-light mx-auto">
 
+        <!--Группы       Последние изменения были сделаны (дата)-->
+
+        <!--Подгруппы    Внимание! Ведомость не заполнена.-->
+
         <form class="simple-form" name="medicine">
             <div class="row my-3 pl-5">
                 <div class="col-md-4 text-center ml-5 pl-3">
