--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -77,7 +77,8 @@
                     <li class="nav-item ng-hide" ng-show="ur == 'SECRETARY'">
                         <a class="nav-link" ui-sref-active="active" ui-sref="link">
                             <i class="fa fa-link"></i>
-                            Связать (под)группу и преподавателя
+                            Настроить списки <!--Аттестационные, Сессионные-->
+                            <!--Связать (под)группу и преподавателя-->
                         </a>
                     </li>
 
