--- a/src/main/resources/static/Templates/link.html
+++ b/src/main/resources/static/Templates/link.html
@@ -120,7 +120,7 @@
             <!-- в списке подгруппы отсутствуют отчисленные студенты на момент просмотра страницы -->
         </div>
 
-        <table class="table table-hover table-sm my-3" ng-if="students.length">
+        <table class="table table-hover table-striped my-3" ng-if="students.length">
             <tr>
                 <th class="text-center">Фамилия</th>
                 <th class="text-center">Имя</th>
