--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,85 +34,89 @@
 
     <!--<button ng-click="toaster()">Show a Toaster</button>-->
 
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
+        <div class="container menu">
             <a class="navbar-brand" href="#">
                 <img src="Images/header-white.png" width="350" alt="Военмех">
             </a>
 
-            <div class="navbar" id="nav">
-                <ul class="navbar-nav">
-                    <!--<li class="nav-item">-->
-                        <!--<a class="nav-link" ui-sref-active="active" ui-sref="home">Главное меню</a>-->
-                    <!--</li>-->
-                    <!-- Для деканата -->
-                    <li class="nav-item ng-hide" ng-show="ur == 'DEANERY'">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="arrangeCertification">
-                            <i class="fa fa-exclamation-circle"></i>
-                            Устроить аттестацию
-                        </a>
-                    </li>
-                    <li class="nav-item ng-hide" ng-show="ur == 'DEANERY'">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="statements">
-                            <i class="fa fa-list-alt"></i>
-                            Ведомости
-                        </a>
-                    </li>
-                    <li class="nav-item ng-hide" ng-show="ur == 'DEANERY'">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="students">
-                            <i class="fa fa-users"></i>
-                            Студенты
-                        </a>
-                    </li>
+            <a class="menu-trigger" href="#"></a>
+            <div class="menu-popup">
+                <a class="menu-close" href="#"></a>
+                <div class="navbar" id="nav">
+                    <ul class="navbar-nav">
+                        <!--<li class="nav-item">-->
+                            <!--<a class="nav-link" ui-sref-active="active" ui-sref="home">Главное меню</a>-->
+                        <!--</li>-->
+                        <!-- Для деканата -->
+                        <li class="nav-item ng-hide" ng-show="ur == 'DEANERY'">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="arrangeCertification">
+                                <i class="fa fa-exclamation-circle"></i>
+                                <!--Устроить--> Добавить аттестацию
+                            </a>
+                        </li>
+                        <li class="nav-item ng-hide" ng-show="ur == 'DEANERY'">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="statements">
+                                <i class="fa fa-list-alt"></i>
+                                Ведомости
+                            </a>
+                        </li>
+                        <li class="nav-item ng-hide" ng-show="ur == 'DEANERY'">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="students">
+                                <i class="fa fa-users"></i>
+                                Студенты
+                            </a>
+                        </li>
 
-                    <!-- Для секретаря -->
-                    <li class="nav-item ng-hide" ng-show="ur == 'SECRETARY'">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="addSubgroup">
-                            <i class="fa fa-plus-square"></i>
-                            Добавить подгруппу
-                        </a>
-                    </li>
+                        <!-- Для секретаря -->
+                        <li class="nav-item ng-hide" ng-show="ur == 'SECRETARY'">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="addSubgroup">
+                                <i class="fa fa-plus-square"></i>
+                                Добавить подгруппу
+                            </a>
+                        </li>
 
-                    <li class="nav-item ng-hide" ng-show="ur == 'SECRETARY'">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="link">
-                            <i class="fa fa-link"></i>
-                            Настроить списки <!--Аттестационные, Сессионные-->
-                            <!--Связать (под)группу и преподавателя-->
-                        </a>
-                    </li>
+                        <li class="nav-item ng-hide" ng-show="ur == 'SECRETARY'">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="link">
+                                <i class="fa fa-link"></i>
+                                Настроить списки <!--Аттестационные, Сессионные-->
+                                <!--Связать (под)группу и преподавателя-->
+                            </a>
+                        </li>
 
-                    <!-- Для преподавателя -->
-                    <li class="nav-item ng-hide" ng-show="ur == 'TEACHER'">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="attestation">
-                            <i class="fa fa-pencil-square"></i>
-                            Заполнение ведомостей
-                        </a>
-                    </li>
+                        <!-- Для преподавателя -->
+                        <li class="nav-item ng-hide" ng-show="ur == 'TEACHER'">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="attestation">
+                                <i class="fa fa-pencil-square"></i>
+                                Заполнение ведомостей
+                            </a>
+                        </li>
 
-                    <!--<li class="nav-item">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="privateAccount">Личный кабинет</a>
-                    </li>
-                    <li class="nav-item ng-hide" ng-show="ur == 'USER'">
-                        <a class="nav-link" ui-sref-active="active" href="basket">
-                            Корзина
-                            <span class="badge badge-light">{{medicines.length}}</span>
-                        </a>
-                    </li>-->
-                    <li class="nav-item">
-                        <a class="nav-link" ui-sref-active="active" ui-sref="help">
-                            <i class="fa fa-book"></i>
-                            Справка
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/logout">
-                            <i class="fa fa-sign-out"></i>
-                            Выйти
-                        </a>
-                    </li>
-                </ul>
+                        <!--<li class="nav-item">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="privateAccount">Личный кабинет</a>
+                        </li>
+                        <li class="nav-item ng-hide" ng-show="ur == 'USER'">
+                            <a class="nav-link" ui-sref-active="active" href="basket">
+                                Корзина
+                                <span class="badge badge-light">{{medicines.length}}</span>
+                            </a>
+                        </li>-->
+                        <li class="nav-item">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="help">
+                                <i class="fa fa-book"></i>
+                                Справка
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/logout">
+                                <i class="fa fa-sign-out"></i>
+                                Выйти
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
+
         </div>
     </nav>
 
@@ -124,16 +128,16 @@
         <div class="my-2 text-white text-center text-small">
             <img src="Images/logo.svg" width="100" alt="Военмех">
 
-            <p class="mb-1">© БГТУ «ВОЕНМЕХ» им. Д.Ф. Устинова 2020</p>
+            <p class="mb-1">© БГТУ «ВОЕНМЕХ» им. Д.Ф. Устинова, 2020</p>
             <ul class="list-inline mb-0 mt-3" id="nav">
                 <!--<li class="list-inline-item"><a ui-sref-active="active" ui-sref="home">Главное меню</a></li>-->
 
-                <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="arrangeCertification">Устроить аттестацию</a></li>
+                <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="arrangeCertification"><!--Устроить--> Добавить аттестацию</a></li>
                 <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="statements">Ведомости</a></li>
                 <li class="list-inline-item ng-hide" ng-show="ur == 'DEANERY'"><a ui-sref-active="active" ui-sref="students">Студенты</a></li>
 
                 <li class="list-inline-item ng-hide" ng-show="ur == 'SECRETARY'"><a ui-sref-active="active" ui-sref="addSubgroup">Добавить подгруппу</a></li>
-                <li class="list-inline-item ng-hide" ng-show="ur == 'SECRETARY'"><a ui-sref-active="active" ui-sref="link">Связать (под)группу и преподавателя</a></li>
+                <li class="list-inline-item ng-hide" ng-show="ur == 'SECRETARY'"><a ui-sref-active="active" ui-sref="link">Настроить списки <!--Связать (под)группу и преподавателя--></a></li>
 
                 <li class="list-inline-item ng-hide" ng-show="ur == 'TEACHER'"><a ui-sref-active="active" ui-sref="attestation">Заполнение ведомостей</a></li>
                 <!--<li class="list-inline-item"><a ui-sref-active="active" ui-sref="privateAccount">Личный кабинет</a></li>-->
@@ -145,7 +149,8 @@
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
