Доработка интерфейса преподавателя и адаптивного меню

--- a/src/main/resources/static/Styles/main.css
+++ b/src/main/resources/static/Styles/main.css
@@ -160,6 +160,7 @@
 @media (min-width: 1140px) {
     .menu-popup {
         display: block!important;
+        transition: all 0s ease 0s!important;
     }
 }
 /* Меню для мобильной версии*/
