--- a/src/main/resources/static/Templates/help.html
+++ b/src/main/resources/static/Templates/help.html
@@ -61,7 +61,7 @@
             </a>
             <br>
             Далее необходимо перейти<br>
-            на страницу ведомости выбранной группы,<br>
+            на страницу ведомости выбранной (под)группы,<br>
             и после внесения изменений<br>
             нажать на кнопку <b>"Сохранить"</b>.
             <br>
