--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -91,16 +91,6 @@
                                 Заполнение ведомостей
                             </a>
                         </li>
-
-                        <!--<li class="nav-item">
-                            <a class="nav-link" ui-sref-active="active" ui-sref="privateAccount">Личный кабинет</a>
-                        </li>
-                        <li class="nav-item ng-hide" ng-show="ur == 'USER'">
-                            <a class="nav-link" ui-sref-active="active" href="basket">
-                                Корзина
-                                <span class="badge badge-light">{{medicines.length}}</span>
-                            </a>
-                        </li>-->
                         <li class="nav-item">
                             <a class="nav-link" ui-sref-active="active" ui-sref="help">
                                 <i class="fa fa-book"></i>
@@ -113,6 +103,15 @@
                                 Выйти
                             </a>
                         </li>
+                        <!--<li class="nav-item">
+                            <a class="nav-link" ui-sref-active="active" ui-sref="privateAccount">Личный кабинет</a>
+                        </li>
+                        <li class="nav-item ng-hide" ng-show="ur == 'USER'">
+                            <a class="nav-link" ui-sref-active="active" href="basket">
+                                Корзина
+                                <span class="badge badge-light">{{medicines.length}}</span>
+                            </a>
+                        </li>-->
                     </ul>
                 </div>
             </div>
@@ -166,6 +165,7 @@
 
     <script src="Controllers/Attestation.js"></script>
     <script src="Controllers/Subject.js"></script>
+    <script src="Controllers/ContentAttestation.js"></script>
 
 </body>
 </html>
