--- a/src/main/resources/static/Templates/contentAttestation.html
+++ b/src/main/resources/static/Templates/contentAttestation.html
@@ -1,99 +1,62 @@
-<div ng-show="ur == 'DEANERY'">
+<div ng-show="ur == 'TEACHER'">
 
-    <div class="my-3 col-md-10 card bg-light mx-auto">
-        <!--<div class="font-weight-bold h4 text-center my-2">
-            Заказы
-        </div>-->
-        <form class="simple-form" name="studentsForm">
-            <div class="my-3 ml-5">
-                <div class="col-md-8 mx-auto">
-                    <!--<div class="form-group">-->
-                    <label for="labelFaculty">Факультет</label>
-                    <select class="custom-select form-control"
-                            name="faculty"
-                            ng-change="getDepartments()"
-                            ng-model="faculty"
-                            ng-options="item.id as item.shortName+'. '+item.fullName for item in faculties"
-                            id="labelFaculty"
-                            required>
-                    </select>
-                </div>
-                <div class="col-md-8 mx-auto mt-3">
-                    <label for="labelDepartment">Кафедра</label>
-                    <select class="custom-select form-control"
-                            ng-disabled="!studentsForm.faculty.$modelValue"
-                            name="department"
-                            ng-change="getGroups()"
-                            ng-model="department"
-                            ng-options="item.id as item.shortName+'. '+item.fullName for item in departments"
-                            id="labelDepartment"
-                            required>
-                    </select>
-                </div>
-                <div class="col-md-8 mx-auto mt-3">
-                    <label for="labelGroup">Группа</label>
-                    <select class="custom-select form-control"
-                            ng-change="students = null"
-                            ng-disabled="!studentsForm.department.$modelValue"
-                            name="group"
-                            ng-model="group"
-                            ng-options="item.id as item.number for item in groups"
-                            id="labelGroup"
-                            required>
-                    </select>
-                </div>
-                <div class="col-md-8 mx-auto mt-4 text-right">
-                    <button class="btn btn-info px-3 text-white"
-                            ng-disabled="!group"
-                            ng-click="findStudents()"
-                            title="Вывести список группы">
-                        Найти
-                    </button>
-                </div>
-            </div>
-        </form>
-    </div>
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a ui-sref="attestation">Список действующих аттестаций</a></li>
+        <li class="breadcrumb-item"><a ui-sref="subject({id: attestationId})">Список предметов</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Редактирование ведомости</li>
+    </ol>
 
     <div class="my-3 card col-md-10 mx-auto">
-        <div class="font-weight-bold text-center m-2 p-2 alert-warning" ng-if="!studentsForm.group.$modelValue">
-            Выберите группу
+        <div class="font-weight-bold h4 text-center mt-4">
+            Список студентов
         </div>
 
-        <div class="font-weight-bold text-center m-2 p-2 alert-warning"
-             ng-if="studentsForm.group.$modelValue && !students.length">
-            Для отображения списка студентов нажмите на кнопку "Найти"
+        <div ng-if="contentAttestation.length">
+            <table class="table table-hover my-3 table-responsive-lg">
+                <thead>
+                    <tr>
+                        <th class="text-center py-3">Фамилия</th>
+                        <th class="text-center">Имя</th>
+                        <th class="text-center">Отчество</th>
+                        <th class="text-center">Номер зачётной книжки</th>
+                        <th class="text-center">Работает</th>
+                        <th class="text-center">Аттестован</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="ca in contentAttestation | orderBy:'student.surname' track by $index">
+                        <td class="text-center py-3">{{ca.student.surname}}</td>
+                        <td class="text-center">{{ca.student.name}}</td>
+                        <td class="text-center">{{ca.student.patronymic}}</td>
+                        <td class="text-center">{{ca.student.numberRecordBook}}</td>
+                        <td class="text-center">
+                            <input type="checkbox" ng-model="ca.works">
+                        </td>
+                        <td class="text-center">
+                            <input type="checkbox" ng-model="ca.attest">
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+            <div class="text-right mb-4">
+                <hr>
+                <button class="btn btn-info text-white"
+                   type="button"
+                   ng-click="replyAll()">
+                   <i class=" fa fa-reply-all"></i>
+                    Откатить изменения
+                </button>
+                <button class="btn btn-info text-white"
+                   type="button"
+                   ng-click="saveContentAttestation()">
+                   <i class="fa fa-floppy-o"></i>
+                    Сохранить
+                </button>
+            </div>
         </div>
 
-        <div class="font-weight-bold h4 text-center mt-4" ng-if="studentsForm.group.$modelValue && students.length">
-            Список студентов группы
-        </div>
-        <table class="table table-hover my-3" ng-if="studentsForm.group.$modelValue && students.length">
-            <tr>
-                <th class="text-center py-3">Фамилия</th>
-                <th class="text-center">Имя</th>
-                <th class="text-center">Отчество</th>
-                <th class="text-center">Номер зачётной книжки</th>
-                <th class="text-center">Отчислен</th>
-            </tr>
-            <tr ng-repeat="st in students | orderBy:'surname' track by $index" class="border-top m-3 text-info text-bold"
-                ng-class="{'text-muted': st.expelled}">
-                <td class="text-center py-3">{{st.surname}}</td>
-                <td class="text-center">{{st.name}}</td>
-                <td class="text-center">{{st.patronymic}}</td>
-                <td class="text-center">{{st.numberRecordBook}}</td>
-                <td class="text-center">
-                    <input type="checkbox" ng-model="st.expelled">
-                </td>
-            </tr>
-        </table>
-        <div class="text-right my-3" ng-if="studentsForm.group.$modelValue && students.length">
-            <hr>
-            <a class="btn btn-info text-white"
-               type="button"
-               data-toggle="modal" data-target="#successModal"
-               ng-click="saveExpelledStudents()">
-                Сохранить изменения
-            </a>
+        <div class="ng-hide font-weight-bold text-center m-2 p-2 alert-warning" ng-show="!contentAttestation.length">
+            Список студентов пуст
         </div>
     </div>
 
